change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "youtube-audio-video",
+	"name": "youtube-media-downloader",
 	"version": "1.0.0",
 	"description": "Web tool to download audio or video from Youtube",
 	"main": "index.js",
